Go back to 1 tps

--- a/template.yaml
+++ b/template.yaml
@@ -18,19 +18,16 @@ Resources:
         - SQSSendMessagePolicy:
             QueueName: account_transfer
       Events:
-        CreateOrUpdateItem:
-          Type: HttpApi
+        ScheduleEvent:
+          Type: ScheduleV2
           Properties:
-            Path: /transfer
-            Method: GET
+            ScheduleExpression: "rate(1 minute)"
+
       Environment:
         Variables:
           NUMBER_OF_TRANSFERS: 60 
 
 Outputs:
-  ApiEndpoint:
-    Description: "The invoke URL for the HTTP API, using GET"
-    Value: !Sub "https://${ServerlessHttpApi}.execute-api.${AWS::Region}.amazonaws.com/validate"
   Function:
     Description: "Transfer simulator function ARN"
     Value: !GetAtt TransferSimulatorFunction.Arn
