QueueUrl is hard-coded in transfer_simulator

--- a/template.yaml
+++ b/template.yaml
@@ -22,13 +22,11 @@ Resources:
           Type: ScheduleV2
           Properties:
             ScheduleExpression: "rate(1 minute)"
-
       Environment:
         Variables:
           # 10 tps
           NUMBER_OF_TRANSFERS: 600
-          QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/709238829564/account_transfer"
-
+          QUEUE_URL: !Sub "https://sqs.${AWS::Region}.amazonaws.com/${AWS::AccountId}/account_transfer"
 
 Outputs:
   Function:
